# Direct

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
direct/: __init__.py  config.py  gradients.py  projection.py  sca.py  selector.py  sketch.py  spectral.py
examples/: gpt2_debug.py
