[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "direct-selection"
version = "0.1.0"
description = "DiReCT: Directionally-Restrained Constrained Training - sample selection for LLM annealing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yuanjian Xu" },
]
keywords = ["llm", "pretraining", "data-selection", "annealing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
examples = ["transformers>=4.30", "datasets>=2.10"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/xuyj233/Direct"

[tool.setuptools.packages.find]
include = ["direct*"]
exclude = ["tests*", "examples*"]
